Fixing G3DEDitor.bat to open app properly in Windows, and created a sh file to run in Linux